[package]
name = "mcp23017-driver"
version = "0.1.2"
edition = "2021"
description = "A comprehensive Rust driver for the Microchip MCP23017 IO expander."
repository = "https://github.com/finn-eger/mcp23017"
license = "MIT"
keywords = ["mcp23017", "no_std"]
categories = ["embedded", "hardware-support", "no-std::no-alloc"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
thiserror = { version = "2.0.11", default-features = false }
